# elayday

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Tiltfile  build.rs
.github/workflows/: docker-publish.yml  rust.yml
kubernetes/: manifest.yaml
proto/: elayday.proto
src/: api.rs  codec.rs  elayday.rs  error.rs  main.rs  processor.rs
