[package]
name = "elayday"
version = "0.1.0"
authors = ["Tibor Djurica Potpara <tibor.djurica@ojdip.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.2", features = ["tls"] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "*", features = ["udp"] }
futures = "^0.3"
bytes = "*"
prost = "0.6"
clap = "3.0.0-beta.1"
uuid = { version = "0.8.1", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }