[package]
name = "elayday"
version = "0.1.0"
authors = ["Tibor Djurica Potpara <tibor.djurica@ojdip.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "^0.4", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "*", features = ["codec", "net"] }
tokio-stream = { version = "*", features = ["time"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = "^1.0"
prost = "0.7"
clap = "3.0.0-beta.2"
uuid = { version = "^0.8", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "^0.4", features = ["prost"] }